--- a/Website/App_Config/Include/ZZZ-Developer-Environment-Settings/Disable.Feature.PrecompileSpeakViews.config
+++ b/Website/App_Config/Include/ZZZ-Developer-Environment-Settings/Disable.Feature.PrecompileSpeakViews.config
@@ -1,6 +1,6 @@
 <!--
 
-Purpose: Optimise a developers local environment for the fastest possible application startup times
+Purpose: Remove Sitecore.Pipelines.Initialize.PrecompileSpeakViews processor
 
 -->
 <configuration xmlns:patch="http://www.sitecore.net/xmlconfig/">
